test/language/spec/stages/invalid/unclosed_fn_block.topo
// TEST: unclosed fn block brace
// EXPECT-ERROR: close namespace

namespace app {
  public:
    void run();
    fn run {
      stage<1> init();
}
